--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-webview": "^13.6.0"
+    "react-native-webview": "^13.6.0",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
